<resources>
    <string name="app_name">SALON</string>
    <string name="add_service">ADD SERVICE</string>
    <string name="view_services">VIEW SERVICES</string>
    <string name="delete_services">DELETE SERVICES</string>
    <string name="update_service">UPDATE SERVICE</string>

    <string name="main_image">main image</string>
    <string name="logout">LOGOUT</string>
    <string name="login">LOGIN</string>
    <string name="home">HOME</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="register_new_customer">Register New Customer</string>
    <string name="username_hint">username_hint</string>
    <string name="password_hint">password_hint</string>
    <string name="addimage">Add Image</string>
    <string name="image_name">image name</string>
    <string name="name">Name</string>
    <string name="haircut">haircut</string>
    <string name="servicename">Service Name</string>
    <string name="updateimageButton">...</string>
    <string name="categoryName">Category Name</string>
    <string name="serviceProvider">Service Provider Name</string>
    <string name="updateHeading">UPDATE SERVICES</string>
    <string name="price">Price</string>

</resources>

