<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_service_menu">

    <TextView
        android:id="@+id/lblLogout"

        android:layout_width="150dp"
        android:layout_height="121dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="332dp"
        android:layout_marginBottom="400dp"
        android:alpha="1"
        android:text="@string/logout"
        android:textAlignment="textStart"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_updateService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toEndOf="@+id/btn_adminMenu"
        app:layout_constraintTop_toBottomOf="@+id/imageView_adminMenu"
        app:layout_constraintVertical_bias="0.9" />

    <ImageView
        android:id="@+id/imageView_adminMenu"
        android:layout_width="450dp"
        android:layout_height="350dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/main_image"
        app:layout_constraintBottom_toTopOf="@+id/btn_adminMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/admin_menu" />

    <Button
        android:id="@+id/btn_adminMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:width="400dp"
        android:height="60dp"
        android:background="#CC8D30"
        android:text="@string/add_service"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_adminMenu" />

    <Button
        android:id="@+id/btn_updateService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:width="400dp"
        android:height="60dp"
        android:textStyle="bold"
        android:text="@string/update_service"
        android:background="#CC8D30"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_adminMenu" />

    <Button
        android:id="@+id/btn_viewService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="#CC8D30"
        android:textStyle="bold"
        android:width="400dp"
        android:height="60dp"
        android:text="@string/view_services"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_updateService" />

    <Button
        android:id="@+id/btn_deleteService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:textStyle="bold"
        android:width="400dp"
        android:height="60dp"
        android:background="#CC8D30"
        android:text="@string/delete_services"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_viewService" />

</androidx.constraintlayout.widget.ConstraintLayout>